--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,17 @@
  body {
-     background-color: rgb(3, 43, 109);
+     background-color: rgb(155, 192, 251);
  }
  
  h2 {
-     color: whitesmoke
+     color: rgb(0, 0, 0)
  }
 
  p {
-     color: whitesmoke
+     color: rgb(0, 0, 0)
  }
+
+ ul {
+    list-style-type; none;
+    margin: 0;
+    padding: 0;
+}
